--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "npm": "^8.6.0",
     "react": "18.0.0",
     "react-bootstrap-sweetalert": "^5.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.29.0",
     "react-markdown": "^8.0.3",
